examples/fail/assm_double_pairing.zc
../all/assm_double_pairing.zc